# whisper-app

./: README.md  pyproject.toml
app/: main.py  whisper.py
app/assets/fonts/: OFL.txt
app/components/: filePicker.py  logView.py  progressBar.py  settings.py
app/config/: transcription_config.py
app/utils/: language_codes.py  torch.py
